0007113: use jira url